update input and button unit.

--- a/demo.less
+++ b/demo.less
@@ -118,7 +118,7 @@ body {
 .grid-demo {
     .ui-g {
         background: @black-10;
-        [class *= "@{ui-class-prefix}-u"] {
+        [class *= "@{ui-class-prefix}u"] {
             background: @black-50;
             color: @white;
             text-align:center;
