--- a/src/css/dropdown.less
+++ b/src/css/dropdown.less
@@ -1,4 +1,4 @@
-.@{ui-class-prefix}-dropdown {
+.@{ui-class-prefix}dropdown {
     position: relative;
     top: auto;
     left: auto;
@@ -36,7 +36,7 @@
     } 
 }
 
-.@{ui-class-prefix}-dropdown {
+.@{ui-class-prefix}dropdown {
     .dropdown-variant(
         @dropdown-background-color,
         @dropdown-border-color,
