--- a/src/css/form.less
+++ b/src/css/form.less
@@ -4,7 +4,7 @@
     padding-right: 0;
 }
 
-.@{ui-class-prefix}-form {
+.@{ui-class-prefix}form {
     fieldset {
         margin: 0;
         padding: .35em 0 .75em;
@@ -20,14 +20,14 @@
         font-size: @form-legend-font-size;
         font-family: @hei-font;
     }
-    .@{ui-class-prefix}-g [class *= "@{ui-class-prefix}-u"] .field {
+    .@{ui-class-prefix}g [class *= "@{ui-class-prefix}u"] .field {
         padding-left: 1%;
         padding-right: 1%;
     }
-    .@{ui-class-prefix}-g [class *= "@{ui-class-prefix}-u"]:first-child .field {
+    .@{ui-class-prefix}g [class *= "@{ui-class-prefix}u"]:first-child .field {
         padding-left: 0;
     }
-    .@{ui-class-prefix}-g [class *= "@{ui-class-prefix}-u"]:last-child .field {
+    .@{ui-class-prefix}g [class *= "@{ui-class-prefix}u"]:last-child .field {
         padding-right: 0;
     }
     .field label{
@@ -98,7 +98,7 @@ textarea:focus {
     border-color: #129FEA;
 }
 
-.@{ui-class-prefix}-xbox-group.vertical>div{
+.@{ui-class-prefix}xbox-group.vertical>div{
     display: block;
     margin-top: 0.3em;
     margin-bottom: 0.3em;
