--- a/assets/main.css
+++ b/assets/main.css
@@ -2,15 +2,6 @@
    Type
    ========= */
 /* =========
-   Input & button height
-   ========= */
-/* =========
-   Inputs
-   ========= */
-/* =========
-   Buttons
-   ========= */
-/* =========
    Type
    ========= */
 /* =========
@@ -792,11 +783,11 @@ dd {
   margin-left: 0;
 }
 a {
-  color: #4d4d4d;
+  color: #137cbd;
   text-decoration: none;
 }
 a:hover {
-  color: #262626;
+  color: #0c4e77;
   text-decoration: underline;
 }
 address {
@@ -951,67 +942,6 @@ ol ol {
 }
 .ui-u-golden-ratio-1 {
   width: 38.2%;
-}
-.esf-grid-u,
-.ui-u,
-.ui-u-1,
-.ui-u-golden-ratio,
-.ui-u-golden-ratio-1,
-.ui-u-1-1,
-.ui-u-2-2,
-.ui-u-1-2,
-.ui-u-3-3,
-.ui-u-2-3,
-.ui-u-1-3,
-.ui-u-4-4,
-.ui-u-3-4,
-.ui-u-2-4,
-.ui-u-1-4,
-.ui-u-24-24,
-.ui-u-23-24,
-.ui-u-22-24,
-.ui-u-21-24,
-.ui-u-20-24,
-.ui-u-19-24,
-.ui-u-18-24,
-.ui-u-17-24,
-.ui-u-16-24,
-.ui-u-15-24,
-.ui-u-14-24,
-.ui-u-13-24,
-.ui-u-12-24,
-.ui-u-11-24,
-.ui-u-10-24,
-.ui-u-9-24,
-.ui-u-8-24,
-.ui-u-7-24,
-.ui-u-6-24,
-.ui-u-5-24,
-.ui-u-4-24,
-.ui-u-3-24,
-.ui-u-2-24,
-.ui-u-1-24,
-.ui-u-5-5,
-.ui-u-4-5,
-.ui-u-3-5,
-.ui-u-2-5,
-.ui-u-1-5 {
-  display: inline-block;
-  *display: inline;
-  zoom: 1;
-  letter-spacing: normal;
-  word-spacing: normal;
-  vertical-align: top;
-  text-rendering: auto;
-  font-family: "Helvetica Neue", Helvetica, Arial, "Microsoft Yahei", "微软雅黑", SimSun, "宋体", STXihei, "华文细黑", sans-serif;
-}
-.ui-u-1-1 {
-  width: 100%;
-  *width: 99.969%;
-}
-.ui-offset-1-1 {
-  margin-left: 100%;
-  *margin-left: NaN%;
 }
 .ui-u-2-2 {
   width: 100%;
@@ -1317,6 +1247,58 @@ ol ol {
   margin-left: 20%;
   *margin-left: NaN%;
 }
+.esf-grid-u,
+.ui-u,
+.ui-u-1,
+.ui-u-golden-ratio,
+.ui-u-golden-ratio-1,
+.ui-u-2-2,
+.ui-u-1-2,
+.ui-u-3-3,
+.ui-u-2-3,
+.ui-u-1-3,
+.ui-u-4-4,
+.ui-u-3-4,
+.ui-u-2-4,
+.ui-u-1-4,
+.ui-u-24-24,
+.ui-u-23-24,
+.ui-u-22-24,
+.ui-u-21-24,
+.ui-u-20-24,
+.ui-u-19-24,
+.ui-u-18-24,
+.ui-u-17-24,
+.ui-u-16-24,
+.ui-u-15-24,
+.ui-u-14-24,
+.ui-u-13-24,
+.ui-u-12-24,
+.ui-u-11-24,
+.ui-u-10-24,
+.ui-u-9-24,
+.ui-u-8-24,
+.ui-u-7-24,
+.ui-u-6-24,
+.ui-u-5-24,
+.ui-u-4-24,
+.ui-u-3-24,
+.ui-u-2-24,
+.ui-u-1-24,
+.ui-u-5-5,
+.ui-u-4-5,
+.ui-u-3-5,
+.ui-u-2-5,
+.ui-u-1-5 {
+  display: inline-block;
+  *display: inline;
+  zoom: 1;
+  letter-spacing: normal;
+  word-spacing: normal;
+  vertical-align: top;
+  text-rendering: auto;
+  font-family: "Helvetica Neue", Helvetica, Arial, "Microsoft Yahei", "微软雅黑", SimSun, "宋体", STXihei, "华文细黑", sans-serif;
+}
 .ui-form fieldset {
   margin: 0;
   padding: .35em 0 .75em;
@@ -1407,14 +1389,16 @@ textarea:focus {
 .ui-input {
   display: inline-block;
   position: relative;
+  font-size: 16px;
+  font-family: "Helvetica Neue", Helvetica, Arial, "Microsoft Yahei", "微软雅黑", SimSun, "宋体", STXihei, "华文细黑", sans-serif;
   color: #4d4d4d;
 }
-.ui-input input,
+.ui-input > input,
 .ui-input textarea {
   padding: 0.65em 1em;
   width: 100%;
   margin: 0;
-  outline: none;
+  outline: 0;
   border-radius: 4px;
   -webkit-transition: background-color 0.3s ease-out, -webkit-box-shadow 0.2s ease, border-color 0.2s ease;
   -moz-transition: background-color 0.3s ease-out, -moz-box-shadow 0.2s ease, border-color 0.2s ease;
@@ -1423,126 +1407,56 @@ textarea:focus {
   transition: background-color 0.3s ease-out, box-shadow 0.2s ease, border-color 0.2s ease;
   box-sizing: border-box;
 }
-.ui-input input,
-.ui-input textarea {
-  background-color: #ffffff;
-  border: 1px solid rgba(0, 0, 0, 0.15);
+.ui-input > input {
+  height: 2.4em;
 }
-.ui-input input:-moz-placeholder,
-.ui-input textarea:-moz-placeholder {
-  color: #bbbbbb;
+.ui-input > input:focus ~ .ui-icon {
+  opacity: 1;
 }
-.ui-input input::-moz-placeholder,
-.ui-input textarea::-moz-placeholder {
-  color: #bbbbbb;
-}
-.ui-input input::-webkit-input-placeholder,
-.ui-input textarea::-webkit-input-placeholder {
-  color: #bbbbbb;
-}
-.ui-input input:-ms-input-placeholder,
-.ui-input textarea:-ms-input-placeholder {
-  color: #bbbbbb;
-}
-.ui-input.active input,
-.ui-input input:active {
-  border-color: #1b9ae8;
-  background-color: #fefdfa;
-}
-.ui-input.focus input,
-.ui-input input:focus {
-  border-color: #1b9ae8;
-  background-color: #fefdfa;
-}
-.ui-input.disabled input,
-.ui-input input[disabled] {
-  background-color: #e6e6e6;
-  border-color: rgba(0, 0, 0, 0.2);
-}
-.ui-input.error input {
-  background-color: #e7bebe;
-  border-color: #fffafa;
-  color: #d95c5c;
-}
-.ui-input.error input:-moz-placeholder {
-  color: #ff0000;
-}
-.ui-input.error input::-moz-placeholder {
-  color: #ff0000;
-}
-.ui-input.error input::-webkit-input-placeholder {
-  color: #ff0000;
-}
-.ui-input.error input:-ms-input-placeholder {
-  color: #ff0000;
-}
-.ui-input input,
-.ui-input textarea {
-  font-size: 16px;
-  font-family: "Helvetica Neue", Helvetica, Arial, "Microsoft Yahei", "微软雅黑", SimSun, "宋体", STXihei, "华文细黑", sans-serif;
-}
-.ui-input input {
-  height: 40px;
-}
-.ui-input.with-icon .ui-icon {
-  width: 40px;
-  line-height: 40px;
-  font-size: 16px;
-}
-.ui-input.with-icon.left input {
-  padding-left: 40px;
-}
-.ui-input.with-icon.left .ui-icon {
-  left: 0;
-}
-.ui-input.with-icon.right input {
-  padding-right: 40px;
-}
-.ui-input.with-icon.right .ui-icon {
-  right: 0;
-}
-.ui-input.loading .loader.icon:before,
-.ui-input.loading .loader .icon:after {
-  display: none;
-}
-.ui-input.transparent input {
+.ui-input.transparent > input {
   border: none;
   background-color: transparent;
 }
-.ui-input.with-icon .ui-icon {
+.ui-input.with-icon.left > input {
+  padding-left: 2.4em;
+}
+.ui-input.with-icon.left > .ui-icon {
+  -webkit-border-top-left-radius: 4px;
+  -moz-border-radius-topleft: 4px;
+  -webkit-border-bottom-left-radius: 4px;
+  -moz-border-radius-bottomleft: 4px;
+  border-bottom-left-radius: 4px;
+  border-top-left-radius: 4px;
+  left: 0;
+}
+.ui-input.with-icon.right > input {
+  padding-right: 2.4em;
+}
+.ui-input.with-icon.right > .ui-icon {
+  -webkit-border-top-right-radius: 4px;
+  -moz-border-radius-topright: 4px;
+  -webkit-border-bottom-right-radius: 4px;
+  -moz-border-radius-bottomright: 4px;
+  border-bottom-right-radius: 4px;
+  border-top-right-radius: 4px;
+  right: 0;
+}
+.ui-input.with-icon > .ui-icon {
+  width: 2.4em;
+  height: 2.4em;
+  line-height: 2.4em;
   position: absolute;
   opacity: 0.5;
-  top: 0px;
-  margin: 0em;
+  top: 0;
   text-align: center;
-  box-sizing: border-box;
   -webkit-transition: opacity 0.3s ease-out;
   -moz-transition: opacity 0.3s ease-out;
   -ms-transition: opacity 0.3s ease-out;
   -o-transition: opacity 0.3s ease-out;
   transition: opacity 0.3s ease-out;
 }
-.ui-input.with-icon .ui-icon:hover {
+.ui-input.with-icon > .ui-icon:hover {
   text-decoration: none;
-}
-.ui-input.with-icon .ui-icon.left {
-  -webkit-border-top-right-radius: 4px;
-  -moz-border-radius-topright: 4px;
-  -webkit-border-bottom-right-radius: 4px;
-  -moz-border-radius-bottomright: 4px;
-  border-bottom-right-radius: 4px;
-  border-top-right-radius: 4px;
-}
-.ui-input.with-icon .ui-icon.right {
-  -webkit-border-top-right-radius: 4px;
-  -moz-border-radius-topright: 4px;
-  -webkit-border-bottom-right-radius: 4px;
-  -moz-border-radius-bottomright: 4px;
-  border-bottom-right-radius: 4px;
-  border-top-right-radius: 4px;
-}
-.ui-input.with-icon > input:focus ~ .ui-icon {
-  opacity: 1;
 }
 .ui-input.fluid {
   display: block;
@@ -1584,155 +1498,58 @@ textarea:focus {
   border-top-right-radius: 0px !important;
   border-bottom-right-radius: 0px !important;
 }
-.ui-input.mini input,
-.ui-input.mini textarea {
-  font-size: 13px;
-  font-family: "Helvetica Neue", Helvetica, Arial, "Microsoft Yahei", "微软雅黑", SimSun, "宋体", STXihei, "华文细黑", sans-serif;
+.ui-input input,
+.ui-input textarea {
+  background-color: #ffffff;
+  border: 1px solid #b3b3b3;
 }
-.ui-input.mini input {
-  height: 32.5px;
+.ui-input input:-moz-placeholder,
+.ui-input textarea:-moz-placeholder {
+  color: #cccccc;
 }
-.ui-input.mini.with-icon .ui-icon {
-  width: 32.5px;
-  line-height: 32.5px;
-  font-size: 13px;
+.ui-input input::-moz-placeholder,
+.ui-input textarea::-moz-placeholder {
+  color: #cccccc;
 }
-.ui-input.mini.with-icon.left input {
-  padding-left: 32.5px;
+.ui-input input::-webkit-input-placeholder,
+.ui-input textarea::-webkit-input-placeholder {
+  color: #cccccc;
 }
-.ui-input.mini.with-icon.left .ui-icon {
-  left: 0;
+.ui-input input:-ms-input-placeholder,
+.ui-input textarea:-ms-input-placeholder {
+  color: #cccccc;
 }
-.ui-input.mini.with-icon.right input {
-  padding-right: 32.5px;
+.ui-input.active input,
+.ui-input input:active {
+  border-color: 1px solid #1b9ae8;
+  background-color: #fefdfa;
 }
-.ui-input.mini.with-icon.right .ui-icon {
-  right: 0;
+.ui-input.focus input,
+.ui-input input:focus {
+  border-color: 1px solid #1b9ae8;
+  background-color: #fefdfa;
 }
-.ui-input.small input,
-.ui-input.small textarea {
-  font-size: 14px;
-  font-family: "Helvetica Neue", Helvetica, Arial, "Microsoft Yahei", "微软雅黑", SimSun, "宋体", STXihei, "华文细黑", sans-serif;
+.ui-input.disabled input,
+.ui-input input[disabled] {
+  background-color: #e6e6e6;
+  border-color: 1px solid rgba(0, 0, 0, 0.2);
 }
-.ui-input.small input {
-  height: 35px;
+.ui-input.error input {
+  background-color: #e7bebe;
+  border-color: 1px solid #fffafa;
+  color: #d95c5c;
 }
-.ui-input.small.with-icon .ui-icon {
-  width: 35px;
-  line-height: 35px;
-  font-size: 14px;
+.ui-input.error input:-moz-placeholder {
+  color: #ff0000;
 }
-.ui-input.small.with-icon.left input {
-  padding-left: 35px;
+.ui-input.error input::-moz-placeholder {
+  color: #ff0000;
 }
-.ui-input.small.with-icon.left .ui-icon {
-  left: 0;
+.ui-input.error input::-webkit-input-placeholder {
+  color: #ff0000;
 }
-.ui-input.small.with-icon.right input {
-  padding-right: 35px;
-}
-.ui-input.small.with-icon.right .ui-icon {
-  right: 0;
-}
-.ui-input.large input,
-.ui-input.large textarea {
-  font-size: 18px;
-  font-family: "Helvetica Neue", Helvetica, Arial, "Microsoft Yahei", "微软雅黑", SimSun, "宋体", STXihei, "华文细黑", sans-serif;
-}
-.ui-input.large input {
-  height: 45px;
-}
-.ui-input.large.with-icon .ui-icon {
-  width: 45px;
-  line-height: 45px;
-  font-size: 18px;
-}
-.ui-input.large.with-icon.left input {
-  padding-left: 45px;
-}
-.ui-input.large.with-icon.left .ui-icon {
-  left: 0;
-}
-.ui-input.large.with-icon.right input {
-  padding-right: 45px;
-}
-.ui-input.large.with-icon.right .ui-icon {
-  right: 0;
-}
-.ui-input.big input,
-.ui-input.big textarea {
-  font-size: 20px;
-  font-family: "Helvetica Neue", Helvetica, Arial, "Microsoft Yahei", "微软雅黑", SimSun, "宋体", STXihei, "华文细黑", sans-serif;
-}
-.ui-input.big input {
-  height: 50px;
-}
-.ui-input.big.with-icon .ui-icon {
-  width: 50px;
-  line-height: 50px;
-  font-size: 20px;
-}
-.ui-input.big.with-icon.left input {
-  padding-left: 50px;
-}
-.ui-input.big.with-icon.left .ui-icon {
-  left: 0;
-}
-.ui-input.big.with-icon.right input {
-  padding-right: 50px;
-}
-.ui-input.big.with-icon.right .ui-icon {
-  right: 0;
-}
-.ui-input.huge input,
-.ui-input.huge textarea {
-  font-size: 22px;
-  font-family: "Helvetica Neue", Helvetica, Arial, "Microsoft Yahei", "微软雅黑", SimSun, "宋体", STXihei, "华文细黑", sans-serif;
-}
-.ui-input.huge input {
-  height: 55px;
-}
-.ui-input.huge.with-icon .ui-icon {
-  width: 55px;
-  line-height: 55px;
-  font-size: 22px;
-}
-.ui-input.huge.with-icon.left input {
-  padding-left: 55px;
-}
-.ui-input.huge.with-icon.left .ui-icon {
-  left: 0;
-}
-.ui-input.huge.with-icon.right input {
-  padding-right: 55px;
-}
-.ui-input.huge.with-icon.right .ui-icon {
-  right: 0;
-}
-.ui-input.massive input,
-.ui-input.massive textarea {
-  font-size: 24px;
-  font-family: "Helvetica Neue", Helvetica, Arial, "Microsoft Yahei", "微软雅黑", SimSun, "宋体", STXihei, "华文细黑", sans-serif;
-}
-.ui-input.massive input {
-  height: 60px;
-}
-.ui-input.massive.with-icon .ui-icon {
-  width: 60px;
-  line-height: 60px;
-  font-size: 24px;
-}
-.ui-input.massive.with-icon.left input {
-  padding-left: 60px;
-}
-.ui-input.massive.with-icon.left .ui-icon {
-  left: 0;
-}
-.ui-input.massive.with-icon.right input {
-  padding-right: 60px;
-}
-.ui-input.massive.with-icon.right .ui-icon {
-  right: 0;
+.ui-input.error input:-ms-input-placeholder {
+  color: #ff0000;
 }
 .ui-button {
   display: inline-block;
@@ -1745,15 +1562,18 @@ textarea:focus {
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+  cursor: pointer;
   border: 1px solid transparent;
+  line-height: 2.4em;
+  height: 2.4em;
+  padding: 0 1em;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
   color: #ffffff;
   background-color: #808080;
   border-color: #808080;
-  padding: 0 16px;
   font-size: 16px;
-  border-radius: 4px;
-  line-height: 38px;
-  height: 40px;
 }
 .ui-button:hover {
   text-decoration: none;
@@ -1765,197 +1585,148 @@ textarea:focus {
 .ui-button:focus {
   outline: 0;
 }
+.ui-button.icon-only {
+  padding: 0 0.6em;
+}
 .ui-button:hover,
 .ui-button.hover {
   color: #ffffff;
   background-color: #666666;
   border-color: #616161;
 }
-.ui-button.ui-icon-only {
-  padding: 0 11px;
-}
-.ui-button.ui-primary {
+.ui-button.primary {
   color: #ffffff;
   background-color: #d00000;
   border-color: #d00000;
 }
-.ui-button.ui-primary:hover,
-.ui-button.ui-primary.hover {
+.ui-button.primary:hover,
+.ui-button.primary.hover {
   color: #ffffff;
   background-color: #9d0000;
   border-color: #930000;
 }
-.ui-button.ui-secondary {
+.ui-button.secondary {
   color: #ffffff;
   background-color: #137cbd;
   border-color: #137cbd;
 }
-.ui-button.ui-secondary:hover,
-.ui-button.ui-secondary.hover {
+.ui-button.secondary:hover,
+.ui-button.secondary.hover {
   color: #ffffff;
   background-color: #0e5e8f;
   border-color: #0d5885;
 }
-.ui-button.ui-success {
+.ui-button.success {
   color: #ffffff;
   background-color: #00bd3c;
   border-color: #00bd3c;
 }
-.ui-button.ui-success:hover,
-.ui-button.ui-success.hover {
+.ui-button.success:hover,
+.ui-button.success.hover {
   color: #ffffff;
   background-color: #008a2c;
   border-color: #008029;
 }
-.ui-button.ui-danger {
+.ui-button.danger {
   color: #ffffff;
   background-color: #d4440b;
   border-color: #d4440b;
 }
-.ui-button.ui-danger:hover,
-.ui-button.ui-danger.hover {
+.ui-button.danger:hover,
+.ui-button.danger.hover {
   color: #ffffff;
   background-color: #a43408;
   border-color: #9a3108;
 }
-.ui-button.ui-info {
+.ui-button.info {
   color: #ffffff;
   background-color: #137cbd;
   border-color: #137cbd;
 }
-.ui-button.ui-info:hover,
-.ui-button.ui-info.hover {
+.ui-button.info:hover,
+.ui-button.info.hover {
   color: #ffffff;
   background-color: #0e5e8f;
   border-color: #0d5885;
 }
-.ui-button.ui-warning {
+.ui-button.warning {
   color: #ffffff;
   background-color: #f35b1f;
   border-color: #f35b1f;
 }
-.ui-button.ui-warning:hover,
-.ui-button.ui-warning.hover {
+.ui-button.warning:hover,
+.ui-button.warning.hover {
   color: #ffffff;
   background-color: #d4440b;
   border-color: #ca410b;
 }
-.ui-button.ui-link {
-  color: #4d4d4d;
+.ui-button.link {
+  color: #137cbd;
   text-decoration: none;
   background: none;
   border: 0;
 }
-.ui-button.ui-link:hover {
-  color: #262626;
+.ui-button.link:hover {
+  color: #0c4e77;
   text-decoration: underline;
 }
-.ui-button.ui-link:hover {
+.ui-button.link:hover {
   background: none;
 }
-.ui-button.ui-fluid {
+.ui-button.fluid {
   display: block;
   width: 100%;
 }
-.ui-button.ui-active,
+.ui-button.active,
 .ui-button:active {
   box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.15) inset, 0 0 6px rgba(0, 0, 0, 0.2) inset;
 }
 .ui-button[disabled],
-.ui-button.ui-disabled,
-.ui-button.ui-disabled:hover,
-.ui-button.ui-disabled:focus,
-.ui-button.ui-disabled:active {
+.ui-button.disabled,
+.ui-button.disabled:hover,
+.ui-button.disabled:focus,
+.ui-button.disabled:active {
   opacity: 0.4;
   filter: alpha(opacity=40);
   cursor: not-allowed;
 }
-.ui-button-group.ui-mini .ui-button,
-.ui-input.ui-mini .ui-action-container .ui-button,
-.ui-button.ui-mini {
-  padding: 0 13px;
+.ui-button-group.mini .ui-button,
+.ui-input.mini,
+.ui-input.mini .ui-action-container .ui-button,
+.ui-button.mini {
   font-size: 13px;
-  border-radius: 4px;
-  line-height: 30.5px;
-  height: 32.5px;
-}
-.ui-button-group.ui-mini .ui-button.ui-icon-only,
-.ui-input.ui-mini .ui-action-container .ui-button.ui-icon-only,
-.ui-button.ui-mini.ui-icon-only {
-  padding: 0 8.75px;
 }
 .ui-button-group.ui-small .ui-button,
-.ui-input.ui-small .ui-action-container .ui-button,
-.ui-button.ui-small {
-  padding: 0 14px;
+.ui-input.small,
+.ui-input.small .ui-action-container .ui-button,
+.ui-button.small {
   font-size: 14px;
-  border-radius: 4px;
-  line-height: 33px;
-  height: 35px;
-}
-.ui-button-group.ui-small .ui-button.ui-icon-only,
-.ui-input.ui-small .ui-action-container .ui-button.ui-icon-only,
-.ui-button.ui-small.ui-icon-only {
-  padding: 0 9.5px;
 }
 .ui-button-group.ui-large .ui-button,
-.ui-input.ui-large .ui-action-container .ui-button,
-.ui-button.ui-large {
-  padding: 0 18px;
+.ui-input.large,
+.ui-input.large .ui-action-container .ui-button,
+.ui-button.large {
   font-size: 18px;
-  border-radius: 4px;
-  line-height: 43px;
-  height: 45px;
-}
-.ui-button-group.ui-large .ui-button.ui-icon-only,
-.ui-input.ui-large .ui-action-container .ui-button.ui-icon-only,
-.ui-button.ui-large.ui-icon-only {
-  padding: 0 12.5px;
 }
 .ui-button-group.ui-big .ui-button,
-.ui-input.ui-big .ui-action-container .ui-button,
-.ui-button.ui-big {
-  padding: 0 20px;
+.ui-input.big,
+.ui-input.big .ui-action-container .ui-button,
+.ui-button.big {
   font-size: 20px;
-  border-radius: 4px;
-  line-height: 48px;
-  height: 50px;
-}
-.ui-button-group.ui-big .ui-button.ui-icon-only,
-.ui-input.ui-big .ui-action-container .ui-button.ui-icon-only,
-.ui-button.ui-big.ui-icon-only {
-  padding: 0 14px;
 }
 .ui-button-group.ui-huge .ui-button,
-.ui-input.ui-huge .ui-action-container .ui-button,
-.ui-button.ui-huge {
-  font-size: 1.375em;
-  padding: 0 22px;
+.ui-input.huge,
+.ui-input.huge .ui-action-container .ui-button,
+.ui-button.huge {
   font-size: 22px;
-  border-radius: 4px;
-  line-height: 53px;
-  height: 55px;
-}
-.ui-button-group.ui-huge .ui-button.ui-icon-only,
-.ui-input.ui-huge .ui-action-container .ui-button.ui-icon-only,
-.ui-button.ui-huge.ui-icon-only {
-  padding: 0 15.5px;
 }
 .ui-button-group.ui-massive .ui-button,
-.ui-input.ui-massive .ui-action-container .ui-button,
-.ui-button.ui-massive {
-  padding: 0 24px;
+.ui-input.massive,
+.ui-input.massive .ui-action-container .ui-button,
+.ui-button.massive {
   font-size: 24px;
-  border-radius: 4px;
-  line-height: 58px;
-  height: 60px;
 }
-.ui-button-group.ui-massive .ui-button.ui-icon-only,
-.ui-input.ui-massive .ui-action-container .ui-button.ui-icon-only,
-.ui-button.ui-massive.ui-icon-only {
-  padding: 0 17px;
-}
-.ui-button-dropdown {
+.ui-button-dropdown-wrap {
   display: inline-block;
   vertical-align: middle;
   position: relative;
