--- a/src/css/base.less
+++ b/src/css/base.less
@@ -20,7 +20,7 @@
  * Add this class to an image to make it fit within it's fluid parent wrapper while maintaining
  * aspect ratio.
  */
-@{ui-class-prefix}-img {
+@{ui-class-prefix}img {
     max-width: 100%;
     height: auto;
     display: block;
@@ -41,6 +41,6 @@ html {
 
 button[disabled],
 html input[disabled],
-@{ui-class-prefix}-disabled {
+@{ui-class-prefix}disabled {
     .ui-disabled();
 }
