--- a/src/css/variable.less
+++ b/src/css/variable.less
@@ -2,7 +2,16 @@
 
 // common config
 @default-font-family: "Helvetica Neue", Helvetica, Arial, "Microsoft Yahei", "微软雅黑", SimSun, "宋体", STXihei, "华文细黑", sans-serif;
+
+// font-size
 @base-font-size: 16px;
+@mini-font-size: @base-font-size * 0.8125;
+@small-font-size: @base-font-size * 0.875;
+@large-font-size: @base-font-size * 1.125;
+@big-font-size: @base-font-size * 1.25;
+@huge-font-size: @base-font-size * 1.375;
+@massive-font-size: @base-font-size * 1.5;
+
 @body-text-color: @neutral-base-color;
 @body-color: @primary-bg-color;
 @body-line-height: 1.3;
@@ -14,30 +23,24 @@
 @default-padding: 10px 16px;
 
 // prefix config
-@ui-class-prefix: ui;
-@ui-variant-prefix: ;
+@ui-class-prefix: ui-;
+@modifier-prefix: ;
 
 /* =========
    Type
    ========= */
-@link-color:       @black-70;
-@link-hover-color: darken(@link-color, 15%);
+@link-color:       @triad-base-color;
+@link-hover-color: darken(@triad-base-color, 15%);
 
-/* =========
-   Input & button height
-   ========= */
-@default-button-height: 40px;
-@default-button-line-height: 40px;
-@default-input-height: 40px;
-   
-/* =========
-   Inputs
-   ========= */
-@input-background-color: #FFFFFF;
-@input-border-color: 1px solid rgba(0, 0, 0, 0.15);
+// =========
+// Input
+// =========
+@input-height: 2.4em; // keep the same height as button
+@input-background-color: @white;
+@input-border-color: @black-30;
 @input-text-color: @black-70;
 @input-text-size: @base-font-size;
-@input-placeholder-color: #BBBBBB;
+@input-placeholder-color: @black-20;
 // tab color, webkit only
 @input-tap-color: rgba(255, 255, 255, 0);
 @input-padding: 0.65em 1em;
@@ -58,11 +61,14 @@
 @input-disabled-border-color: rgba(0, 0, 0, 0.2);
 @input-disabled-background-color: @black-10;
 
-/* =========
-   Buttons
-   ========= */
-@default-button-icon-padding: 10px;
-@default-button-padding: 16px;
+// =========
+// Buttons
+// =========
+@default-button-height: 2.4em;
+@default-button-line-height: 2.4em;
+
+@default-button-icon-padding: 0 0.6em;
+@default-button-padding: 0 1em;
 
 @default-button-text-color: @white;
 @default-button-background-color: @black-50;
